statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-db
  labels:
    app: mysql-db
spec:
  serviceName: "mysql-db"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: db
          image: db:latest  
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
      imagePullSecrets:
        - name: 1bb4fb1f-395d-4fe5-8325-661d2eb5f830  

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  labels:
    app: mysql-db
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-db
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maven-app
  labels:
    app: maven-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maven-app
  template:
    metadata:
      labels:
        app: maven-app
    spec:
      containers:
        - name: mymvn
          image: mymvn:latest  
          ports:
            - containerPort: 8080
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: 1bb4fb1f-395d-4fe5-8325-661d2eb5f830  

---
apiVersion: v1
kind: Service
metadata:
  name: maven-app
  labels:
    app: maven-app
spec:
  type: NodePort
  selector:
    app: maven-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
