ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maven-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: maven-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maven-app
                port:
                  number: 8080
